# Sagent

./: .env.example  .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  calls.py  contacts.py  settings.py  webhooks.py
backend/app/core/: config.py  database.py  defaults.py  schema_bootstrap.py  security.py  seed.py
backend/app/models/: entities.py
backend/app/repositories/: __init__.py  auth_repository.py  call_repository.py  contact_repository.py  settings_repository.py
backend/app/schemas/: auth.py  call.py  contact.py  settings.py
backend/app/services/: avatar_service.py  call_service.py  email_service.py  google_identity_service.py  mock_voice_engine.py  runtime.py  session_service.py
backend/app/ws/: observer.py
backend/tests/: test_google_identity_service.py
docs/: 1__System-Architecture-Design.md  2__Voice-AI-Engine-Design.md  3__Backend-System-Design.md  4__Database-Data-Model-Design.md  5__API-Contract-Specification.md  6__Frontend-System-Design.md  7__Sequence-Interaction-Design.md  UI-UX Design Spec.md
frontend/: .env.local  README.md  global.d.ts  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/components/: AccountPageContent.tsx  PageContent.tsx
frontend/contexts/: NavContext.tsx  PanelPathContext.tsx
frontend/hooks/: useAuth.ts  useCall.ts  useThemePreference.ts
frontend/lib/: api.ts  auth.ts  call-status.ts  ui.ts
frontend/types/: index.ts
(+37 files in other folders)
